--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.3.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "mongodb": "^5.0.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-query": "^3.39.3",
+    "typescript": "4.9.5",
+    "zod": "^3.20.6"
+  },
+  "devDependencies": {
+    "sass": "^1.58.0"
   }
 }
