--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "axios": "^1.3.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "formik": "^2.2.9",
     "mongodb": "^5.0.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "typescript": "4.9.5",
+    "yup": "^1.0.0",
     "zod": "^3.20.6"
   },
   "devDependencies": {
