--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
+    "swiper": "^9.0.5",
     "typescript": "4.9.5",
     "yup": "^1.0.0",
     "zod": "^3.20.6"
