--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "flexsearch": "^0.7.31",
     "formik": "^2.2.9",
     "material-symbols": "^0.5.5",
     "mongodb": "^5.0.1",
