--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@svgr/webpack": "^7.0.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
-    "flexsearch": "^0.7.31",
     "formik": "^2.2.9",
+    "fuse.js": "^6.6.2",
     "material-symbols": "^0.5.5",
     "mongodb": "^5.0.1",
     "next": "13.1.6",
